--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class = "header">
         <div class = "logo">
             <h1>Marlies Kuipers</h1> 
         </div>
@@ -21,5 +22,8 @@
             </nav>
         </div>
     </header>
+    </div>
+    <div class = "backGround">
+    </div>
 </body>
 </html>
