--- a/projecten.html
+++ b/projecten.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -32,6 +32,82 @@
           </div>
         </div>
       </nav>
+
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Pong</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Pong</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Tank Game</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Tank Game</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Race Game</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Race Game</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Pong</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Pong</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Pong</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Pong</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Pong</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Pong</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 18rem;">
+                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title">Pong</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">speel Pong</a>
+                  </div>
+                </div>
+            </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
