--- a/index.html
+++ b/index.html
@@ -33,7 +33,44 @@
         </div>
       </nav>
 
-      <h1>maak een carousel met games erin en klein welkomst tekstje.</h1>
+      <div class="container bg-primary">
+        <h1>maak een carousel met games erin en klein welkomst tekstje.</h1> 
+      </div>
+
+      <div class="container">
+        <div class="carousel-height">
+          <!--<div class="w-50">-->
+            <div class="d-flex justify-content-center">
+              <div class="row bg-danger">
+                <div class="col-12 ">
+                  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/pongScreenshot.png" class="d-block w-100" alt="pongScreenshot">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/tankGameScreenshot.png" class="d-block w-100" alt="tankGameScreenshot">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/raceGameScreenshot.png" class="d-block w-100" alt="raceGameScreenshot">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!--</div>-->
+        </div>
+      </div>
+
       <!--<main>
         <div class="container">
             <div class="row">
