--- a/index.html
+++ b/index.html
@@ -47,12 +47,21 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="images/pongScreenshot.png" class="d-block w-100" alt="pongScreenshot">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Games</h5>
+                        </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/tankGameScreenshot.png" class="d-block w-100" alt="tankGameScreenshot">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Code</h5>
+                        </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/raceGameScreenshot.png" class="d-block w-100" alt="raceGameScreenshot">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Blender</h5>
+                        </div>
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
