--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
       </div>
 
       <div class="container">
-        <div class="carousel-height">
-          <!--<div class="w-50">-->
-            <div class="d-flex justify-content-center">
+        <div class="carousel-height ">
+            <div class="d-flex justify-content-center fixed-bottom">
               <div class="row bg-danger">
                 <div class="col-12 ">
                   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -52,13 +51,13 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="images/tankGameScreenshot.png" class="d-block w-100" alt="tankGameScreenshot">
+                        <img src="PortfolioImg/TowerDefenceCodeImgSmall.png" class="d-block w-100" alt="Code">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Code</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="images/raceGameScreenshot.png" class="d-block w-100" alt="raceGameScreenshot">
+                        <img src="PortfolioImg/BuildingImage.png" class="d-block w-100" alt="BuildingImage">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Blender</h5>
                         </div>
@@ -76,7 +75,6 @@
                 </div>
               </div>
             </div>
-          <!--</div>-->
         </div>
       </div>
 
