fixed carousel images and start update project cards

--- a/projecten.html
+++ b/projecten.html
@@ -34,10 +34,10 @@
       </nav>
 
       <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title">Pong</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title">Tank Game</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -56,8 +56,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title">Race Game</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -66,40 +66,50 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Pong</h5>
+                    <h5 class="card-title">RTS</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Pong</h5>
+                    <h5 class="card-title">Tower Defence</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+              <div class="card h-100 text-center" style="width: 30rem;">
+                <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card-body">
+                  <h5 class="card-title">Unreal Keuzedeel</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">speel Pong</a>
+                </div>
+              </div>
+          </div>
+            <div class="col">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Pong</h5>
+                    <h5 class="card-title">Squirry</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 18rem;">
-                  <img src="images/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card h-100 text-center" style="width: 30rem;">
+                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Pong</h5>
+                    <h5 class="card-title">Global Game Jam 2024</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
