--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
 
       <div class="container">
         <div class="carousel-height ">
-            <div class="d-flex justify-content-center fixed-bottom">
+            <div class="d-flex justify-content-center">
               <div class="row bg-danger">
-                <div class="col-12 ">
+                <div class="col-12">
                   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/pongScreenshot.png" class="d-block w-100" alt="pongScreenshot">
+                        <img src="PortfolioImg/RTSScrnshot.png" class="d-block" alt="pongScreenshot">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Games</h5>
+                          <h5>Projecten</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="PortfolioImg/TowerDefenceCodeImgSmall.png" class="d-block w-100" alt="Code">
+                        <img src="PortfolioImg/codeScaled.png" class="d-block" alt="Code">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Code</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="PortfolioImg/BuildingImage.png" class="d-block w-100" alt="BuildingImage">
+                        <img src="PortfolioImg/BuildingImage.png" class="d-block" alt="BuildingImage">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Blender</h5>
                         </div>
