--- a/blender.html
+++ b/blender.html
@@ -36,7 +36,8 @@
         </div>
       </nav>
 
-      <h1 class="text-light">geef een email en je linkdin profiel.</h1>
+      <h1 class="text-light">zet hier wat blender models</h1>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
