--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
           <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
@@ -21,6 +21,9 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="projecten.html">Projecten</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blender.html">Blender</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="overmij.html">Over mij</a>
@@ -34,7 +37,7 @@
       </nav>
 
       <div class="container bg-primary">
-        <h1>maak een carousel met games erin en klein welkomst tekstje.</h1> 
+        <h1 class="text-light ">maak een carousel met games erin en klein welkomst tekstje.</h1> 
       </div>
 
       <div class="container">
