--- a/overmij.html
+++ b/overmij.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
           <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
@@ -21,6 +21,9 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="projecten.html">Projecten</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blender.html">Blender</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="overmij.html">Over mij</a>
@@ -34,8 +37,8 @@
       </nav>
 
       <div class="container">
-        <h1>Over mij</h1>
-        <h2>Hallo, mijn naam is Marlies. 
+        <h1 class="text-light">Over mij</h1>
+        <h2  class="text-light">Hallo, mijn naam is Marlies. 
             Op dit moment ben ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen. 
             Ik heb 5 projecten gemaakt en ben bezig met een RTS op dit moment. 
             Ook heb ik meegedaan aan de Global Game Jam in Groningen 2023 samen met een paar klasgenoten. 
