--- a/projecten.html
+++ b/projecten.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
           <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
@@ -21,6 +21,9 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="projecten.html">Projecten</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="blender.html">Blender</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="overmij.html">Over mij</a>
@@ -36,81 +39,81 @@
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Pong</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Pong</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Tank Game</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Tank Game</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Tank Game</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Race Game</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Race Game</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Race Game</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">RTS</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">RTS</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Tower Defence</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Tower Defence</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-              <div class="card h-100 text-center" style="width: 30rem;">
+              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                 <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
-                  <h5 class="card-title">Unreal Keuzedeel</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="card-title text-light">Unreal Keuzedeel</h5>
+                  <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">speel Pong</a>
                 </div>
               </div>
           </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Squirry</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Squirry</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 text-center" style="width: 30rem;">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title">Global Game Jam 2024</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title text-light">Global Game Jam 2024</h5>
+                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">speel Pong</a>
                   </div>
                 </div>
