updated cards and started adding builds and vids

--- a/projecten.html
+++ b/projecten.html
@@ -43,8 +43,10 @@
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Pong</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Pong</a>
+                    <p class="card-text text-light">Pong was de eerste game die ik heb gemaakt tijdens mijn opleiding.
+                      Ik heb zelf de achtergrond gemaakt in Aseprite.
+                    </p>
+                    <a href="#" class="btn btn-primary">Download Pong</a>
                   </div>
                 </div>
             </div>
@@ -53,8 +55,10 @@
                   <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tank Game</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Tank Game</a>
+                    <p class="card-text text-light">Voor onze tweede opdracht moesten we een tank game maken waar je lokaal met twee spelers kon spelen.
+                      Ik heb hierbij ook alle sprites gemaakt in Aseprite.
+                    </p>
+                    <a href="#" class="btn btn-primary">Download Tank Game</a>
                   </div>
                 </div>
             </div>
@@ -63,8 +67,9 @@
                   <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Race Game</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Race Game</a>
+                    <p class="card-text text-light">Voor onze derde opdracht moesten we een race game maken waar je tegen AI kon racen. 
+                      Ik heb hierbij ook zelf models gemaakt in blender.</p>
+                    <a href="#" class="btn btn-primary">Download Race Game</a>
                   </div>
                 </div>
             </div>
@@ -73,8 +78,10 @@
                   <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">RTS</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Pong</a>
+                    <p class="card-text text-light">Voor het tweede jaar begonnen we met het maken van een RTS in een groep. 
+                      Ik heb de code voor de soldiers geschreven wat jammer genoeg aan het einde omgeschreven moest worden. 
+                      Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw.</p>
+                    <a href="#" class="btn btn-primary">Download RTS</a>
                   </div>
                 </div>
             </div>
@@ -83,8 +90,11 @@
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tower Defence</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Pong</a>
+                    <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
+                      Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
+                      Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
+                    </p>
+                    <a href="#" class="btn btn-primary">Download Tower Defence</a>
                   </div>
                 </div>
             </div>
@@ -93,8 +103,11 @@
                 <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
                   <h5 class="card-title text-light">Unreal Keuzedeel</h5>
-                  <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">speel Pong</a>
+                  <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
+                    waar je drie knoppen moet vinden om de deur naar het einde te openen.
+                    Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
+                  </p>
+                  <a href="#" class="btn btn-primary">Download Unreal Keuzedeel</a>
                 </div>
               </div>
           </div>
@@ -103,18 +116,22 @@
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Squirry</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Pong</a>
+                    <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
+                      Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
+                    </p>
+                    <a href="#" class="btn btn-primary">Download Squirry</a>
                   </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Global Game Jam 2024</h5>
-                    <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">speel Pong</a>
+                    <h5 class="card-title text-light">Lighten Up</h5>
+                    <p class="card-text text-light">In 2024 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
+                      Hierbij heb ik bijna alle sprites en animaties gemaakt. Hieronder een kleine preview van mijn animaties. 
+                    </p>
+                    <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
                   </div>
                 </div>
             </div>
