start adding builds

--- a/projecten.html
+++ b/projecten.html
@@ -80,8 +80,9 @@
                     <h5 class="card-title text-light">RTS</h5>
                     <p class="card-text text-light">Voor het tweede jaar begonnen we met het maken van een RTS in een groep. 
                       Ik heb de code voor de soldiers geschreven wat jammer genoeg aan het einde omgeschreven moest worden. 
-                      Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw.</p>
-                    <a href="#" class="btn btn-primary">Download RTS</a>
+                      Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw. 
+                      Deze models staan in de Blender tab.</p>
+                    <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
                   </div>
                 </div>
             </div>
