--- a/index.html
+++ b/index.html
@@ -40,68 +40,40 @@
         <h1 class="text-light">maak een carousel met games erin en klein welkomst tekstje.</h1> 
       </div>
 
-      <div class="container d-flex justify-content-center">
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="PortfolioImg/RTSScrnshot.png" class="d-block w-75" alt="RTS">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="PortfolioImg/BuildingImage.png" class="d-block w-75" alt="Blender">
-            </div>
-            <div class="carousel-item">
-              <img src="PortfolioImg/codeScaled.png" class="d-block w-75" alt="code">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-
       <div class="container">
-        <div class="carousel-height">
-            <div class="d-flex justify-content-center">
-              <div class="row bg-danger">
-                <div class="col-12">
-                  <div id="carouselExampleAutoplaying" class="carousel slide justify-content-center" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="PortfolioImg/RTSScrnshot.png" class="d-block w-100" alt="pongScreenshot">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Projecten</h5>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="PortfolioImg/codeScaled.png" class="d-block w-100" alt="Code">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Code</h5>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="PortfolioImg/BuildingImage.png" class="d-block w-100" alt="BuildingImage">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Blender</h5>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-8">
+            <div id="carouselExampleAutoplaying" class="carousel slide justify-content-center" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="PortfolioImg/RTSScrnshot.png" class="d-block w-100" alt="pongScreenshot">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Projecten</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="PortfolioImg/codeScaled.png" class="d-block w-100" alt="Code">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Code</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="PortfolioImg/BuildingImage.png" class="d-block w-100" alt="BuildingImage">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Blender</h5>
                   </div>
                 </div>
               </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
+          </div>
         </div>
       </div>
 
