--- a/projecten.html
+++ b/projecten.html
@@ -46,7 +46,7 @@
                     <p class="card-text text-light">Pong was de eerste game die ik heb gemaakt tijdens mijn opleiding.
                       Ik heb zelf de achtergrond gemaakt in Aseprite.
                     </p>
-                    <a href="#" class="btn btn-primary">Download Pong</a>
+                    <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
                   </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     <p class="card-text text-light">Voor onze tweede opdracht moesten we een tank game maken waar je lokaal met twee spelers kon spelen.
                       Ik heb hierbij ook alle sprites gemaakt in Aseprite.
                     </p>
-                    <a href="#" class="btn btn-primary">Download Tank Game</a>
+                    <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
                   </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     <h5 class="card-title text-light">Race Game</h5>
                     <p class="card-text text-light">Voor onze derde opdracht moesten we een race game maken waar je tegen AI kon racen. 
                       Ik heb hierbij ook zelf models gemaakt in blender.</p>
-                    <a href="#" class="btn btn-primary">Download Race Game</a>
+                    <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
                   </div>
                 </div>
             </div>
@@ -88,39 +88,26 @@
             </div>
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tower Defence</h5>
                     <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
                       Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
                       Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
                     </p>
-                    <a href="#" class="btn btn-primary">Download Tower Defence</a>
+                    <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
                   </div>
                 </div>
             </div>
             <div class="col">
               <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Unreal Keuzedeel</h5>
-                  <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
-                    waar je drie knoppen moet vinden om de deur naar het einde te openen.
-                    Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
-                  </p>
-                  <a href="#" class="btn btn-primary">Download Unreal Keuzedeel</a>
-                </div>
-              </div>
-          </div>
-            <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Squirry</h5>
                     <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
                       Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
                     </p>
-                    <a href="#" class="btn btn-primary">Download Squirry</a>
+                    <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Squirry</a>
                   </div>
                 </div>
             </div>
@@ -135,10 +122,23 @@
                     <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
                   </div>
                 </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <div class="card-body">
+                    <h5 class="card-title text-light">Unreal Keuzedeel</h5>
+                    <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
+                      waar je drie knoppen moet vinden om de deur naar het einde te openen.
+                      Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
+                    </p>
+                    <a href="#" class="btn btn-primary">Download Unreal Keuzedeel</a>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-      </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+          </div>
+          
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
