added all blender models and added spaces in about me

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         </div>
       </nav>
 
-      <div class="container bg-primary">
-        <h1 class="text-light">maak een carousel met games erin en klein welkomst tekstje.</h1> 
+      <div class="container">
+        <h2 class="text-light p-4"><center>Hallo, mijn naam is Marlies. 
+          <br>Ik ben een software game developer op Noorderpoort in Groningen.
+        </center></h2> 
       </div>
 
       <div class="container">
