--- a/overmij.html
+++ b/overmij.html
@@ -37,24 +37,30 @@
       </nav>
 
       <div class="container">
+        <center>
+        <h1 class="text-light">Zet hier nog wat plaatjes neer ofzo</h1>
         <h1 class="text-light">Over mij</h1>
         <h2  class="text-light">Hallo, mijn naam is Marlies. 
-            Op dit moment ben ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen. 
-            Ik heb 5 projecten gemaakt en ben bezig met een RTS op dit moment. 
-            Ook heb ik meegedaan aan de Global Game Jam in Groningen 2023 samen met een paar klasgenoten. 
+            Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
+            Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
+            Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.
+            <br><br> 
+            Het programma wat ik nu het meeste gebruik is Unity met C#. 
+            Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. 
+            Verder heb ik al een basis met het maken van modellen in Blender. 
+            Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn. 
+            Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games. 
+            Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan verbeteren.
+            <br><br> 
             Ik woon samen met mijn ouders, broertje, kat en hond. 
             Sinds ik een kind was heb ik altijd al zitten gamen met mijn familie. 
             Het eerste console waar ik op heb gespeeld was de Playstation 2. 
             Toen ging ik van Nintendo DS naar de WII en de Playstation 4. 
             Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet. 
             Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer. 
-            Het programma wat ik nu het meeste gebruik is Unity met C#. 
-            Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. 
-            Verder heb ik al een basis met het maken van modellen in Blender. 
-            Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn. 
-            Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games. 
-            Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan verbeteren.</h2>
+          </h2>
       </div>
+    </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
