--- a/projecten.html
+++ b/projecten.html
@@ -36,7 +36,7 @@
         </div>
       </nav>
 
-      <div class="container">
+      <div class="container p-4">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
