added placeholder img to about me page

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,8 @@
       <div class="p-4 d-flex flex-column w-100 align-items-center">
           <h1 class="text-light p-4">U kunt gerust contact met mij opnemen via de volgende linken:</h1>
           <div class="">
-          <h2 class="text-light p-4"><img src="PortfolioImg/MailLogoBlue.png" alt="MailLogo" width="80px" height="80px"> mkuipers28@st.noorderpoort.nl</h2>
+          <h2 class="text-light p-4"><img src="PortfolioImg/MailLogoBlue.png" alt="MailLogo" width="80px" height="80px"> 
+            <img src="PortfolioImg/EmailScreenshot.png" alt="EmailScreenshot"></h2>
           <h2 class="text-light p-4">
             <a href="https://www.linkedin.com/in/marlies-kuipers-abb565292/">
               <img src="PortfolioImg/LinkedIn-Icon-Square.png" alt="LinkedInLogo" width="80px" height="80px">
