--- a/overmij.html
+++ b/overmij.html
@@ -39,10 +39,18 @@
       <div class="container p-4">
         <center>
         <h1 class="text-light">Over mij</h1>
-        <h3  class="text-light">Hallo, mijn naam is Marlies. 
-            Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
-            Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
-            Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.
+        <h3  class="text-light">
+          <div class="container-aboutme">
+            <div class="text">
+              Hallo, mijn naam is Marlies. <br>
+              Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
+              Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
+              Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.  
+            </div>
+            <div class="img">
+              <img src="PortfolioImg/raceGameScreenshot.png" alt="placeholder" height="300px" width="300px">
+            </div>
+          </div>
             <br><br> 
             Het programma wat ik nu het meeste gebruik is Unity met C#. 
             Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. 
