fixed unreal project

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </nav>
 
       <div class="container">
-        <h2 class="text-light p-4"><center>Hallo, mijn naam is Marlies. 
+        <h2 class="text-light p-4 text-center">Hallo, mijn naam is Marlies. 
           <br>Ik ben een software game developer op Noorderpoort in Groningen.
-        </center></h2> 
+        </h2> 
       </div>
 
       <div class="container">
