--- a/projecten.html
+++ b/projecten.html
@@ -38,6 +38,29 @@
       <center>
       <div class="container p-4">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+          <div class="col">
+            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+              <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
+              <div class="card-body">
+                <h5 class="card-title text-light">Race Game</h5>
+                <p class="card-text text-light">Voor onze derde opdracht moesten we een race game maken waar je tegen AI kon racen. 
+                  Ik heb hierbij ook zelf models gemaakt in blender.</p>
+                <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
+              </div>
+            </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+              <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
+              <div class="card-body">
+                <h5 class="card-title text-light">Scurry</h5>
+                <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
+                  Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
+                </p>
+                <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Squirry</a>
+              </div>
+            </div>
+        </div>
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
@@ -61,18 +84,7 @@
                     <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
                   </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Race Game</h5>
-                    <p class="card-text text-light">Voor onze derde opdracht moesten we een race game maken waar je tegen AI kon racen. 
-                      Ik heb hierbij ook zelf models gemaakt in blender.</p>
-                    <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
-                  </div>
-                </div>
-            </div>
+            </div>          
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
@@ -99,18 +111,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Scurry</h5>
-                    <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
-                      Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
-                    </p>
-                    <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Squirry</a>
-                  </div>
-                </div>
-            </div>
+            
             <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
@@ -132,7 +133,7 @@
                       waar je drie knoppen moet vinden om de deur naar het einde te openen.
                       Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
                     </p>
-                    <a href="ProjectBuilds/UnrealKeuzedeel.zip" class="btn btn-primary">Download Unreal Keuzedeel</a>
+                    <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal Keuzedeel</a>
                   </div>
                 </div>
               </div>
