--- a/overmij.html
+++ b/overmij.html
@@ -37,9 +37,8 @@
       </nav>
 
       <div class="container p-4">
-        <center>
-        <h1 class="text-light">Over mij</h1>
-        <h3  class="text-light">
+        <h1 class="text-light text-center">Over mij</h1>
+        <h3  class="text-light text-center">
           <div class="container-aboutme">
             <div class="text">
               Hallo, mijn naam is Marlies. <br>
@@ -67,7 +66,6 @@
             Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer. 
           </h3>
       </div>
-    </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
