--- a/projecten.html
+++ b/projecten.html
@@ -43,7 +43,7 @@
               <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
               <div class="card-body">
                 <h5 class="card-title text-light">Race Game</h5>
-                <p class="card-text text-light">Voor onze derde opdracht moesten we een race game maken waar je tegen AI kon racen. 
+                <p class="card-text text-light">Voor mijn derde opdracht moest ik een race game maken waar je tegen AI kon racen. 
                   Ik heb hierbij ook zelf models gemaakt in blender.</p>
                 <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
               </div>
@@ -78,7 +78,7 @@
                   <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tank Game</h5>
-                    <p class="card-text text-light">Voor onze tweede opdracht moesten we een tank game maken waar je lokaal met twee spelers kon spelen.
+                    <p class="card-text text-light">Voor mijn tweede opdracht moest ik een tank game maken waar je lokaal met twee spelers kon spelen.
                       Ik heb hierbij ook alle sprites gemaakt in Aseprite.
                     </p>
                     <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
