added english pages and about me picture

--- a/projectenEn.html
+++ b/projectenEn.html
@@ -13,29 +13,29 @@
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
+                <a class="nav-link" href="projectenEn.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
+                <a class="nav-link" href="blenderEn.html">Blender</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
+                <a class="nav-link" href="overmijEn.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contactEn.html">Contact</a>
               </li>
             </ul>
           </div>
           <div class="vlag">
-            <a href="projectenEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
+            <a href="projecten.html">
+              <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
             </a>
           </div>
         </div>
