--- a/blenderEn.html
+++ b/blenderEn.html
@@ -13,29 +13,29 @@
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
+                <a class="nav-link" href="projectenEn.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
+                <a class="nav-link" href="blenderEn.html">Blender</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
+                <a class="nav-link" href="overmijEn.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contactEn.html">Contact</a>
               </li>
             </ul>
           </div>
           <div class="vlag">
-            <a href="blenderEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
+            <a href="blender.html">
+            <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
             </a>
           </div>
         </div>
@@ -50,7 +50,7 @@
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
               <div class="card-body">
-                <h5 class="card-title text-light">NPGJ Bijl</h5>
+                <h5 class="card-title text-light">NPGJ Axe</h5>
                 <p class="card-text text-light">Tijdens de Game Jam van Noorderpoort heb ik ook deze bijl gemaakt.
                 </p>
               </div>
@@ -63,7 +63,7 @@
                 <source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
               </video>
               <div class="card-body">
-                <h5 class="card-title text-light">RTS modellen</h5>
+                <h5 class="card-title text-light">RTS models</h5>
                 <p class="card-text text-light">In de RTS die ik met mijn groep heb gemaakt.
                    heb ik alle models van de speler en vijand gemaakt in blender. De animaties heb ik van Mixamo afgehaald.
                 </p>
@@ -75,7 +75,7 @@
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                 <img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
                 <div class="card-body">
-                  <h5 class="card-title text-light">NPGJ Speler</h5>
+                  <h5 class="card-title text-light">NPGJ Player</h5>
                   <p class="card-text text-light">Wij hadden een kleine Game Jam waarbij de eerste en tweede klassers samen gingen werken.
                      Ik heb voor deze speler model gezorgd. 
                   </p>
@@ -87,7 +87,7 @@
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Race auto</h5>
+                    <h5 class="card-title text-light">Race car</h5>
                     <p class="card-text text-light">Een van mijn eerste models die ik gemaakt heb is deze race auto.
                     </p>
                   </div>
@@ -98,7 +98,7 @@
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Kabouter Tower Defence</h5>
+                    <h5 class="card-title text-light">Gnome Tower Defence</h5>
                     <p class="card-text text-light">Voor onze tower defence moesten we ieder een toren maken.
                        Mijn groep had ervoor gekozen om met een kabouter thema te gaan.</p>
                   </div>
@@ -109,7 +109,7 @@
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Torens Tower Defence</h5>
+                    <h5 class="card-title text-light">Towers Tower Defence</h5>
                     <p class="card-text text-light">Dit zijn mijn torens. Elke toren moest 3 levels hebben.</p>
                   </div>
                 </div>
