--- a/indexEn.html
+++ b/indexEn.html
@@ -13,29 +13,29 @@
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
+                <a class="nav-link" href="projectenEn.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
+                <a class="nav-link" href="blenderEn.html">Blender</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
+                <a class="nav-link" href="overmijEn.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contactEn.html">Contact</a>
               </li>
             </ul>
           </div>
           <div class="vlag">
-            <a href="indexEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
+            <a href="index.html">
+              <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
             </a>
           </div>
         </div>
@@ -55,7 +55,7 @@
                 <div class="carousel-item active">
                   <img src="PortfolioImg/RTSScrnshot.png" class="d-block w-100" alt="pongScreenshot">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Projecten</h5>
+                    <h5>Projects</h5>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -84,30 +84,6 @@
         </div>
       </div>
 
-      <!--<main>
-        <div class="container">
-            <div class="row">
-                <div class="col bg-danger">col</div>
-                <div class="col bg-warning">col</div>
-            </div>
-            <div class="row">
-                <div class="col-6 bg-primary">col-6</div>
-                <div class="col-4 bg-danger">col-4</div>
-                <div class="col-2 bg-success">col-2</div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-4 bg-primary">col-lg-3</div>
-                <div class="col-lg-3 col-md-4 bg-danger">col-lg-3</div>
-                <div class="col-lg-3 col-md-4 bg-success">col-lg-3</div>
-                <div class="col-lg-3 col-md-6 bg-primary">col-lg-3</div>
-            </div>
-        </div>
-        <div class="container d-flex flex-column flex-md-row">
-            <h1 class="bg-danger p-4">een</h1>
-            <h1 class="bg-primary p-4">twee</h1>
-            <h1 class="bg-success p-4">drie</h1>
-        </div>
-      </main>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
