--- a/overmijEn.html
+++ b/overmijEn.html
@@ -13,36 +13,36 @@
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
+                <a class="nav-link" href="projectenEn.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
+                <a class="nav-link" href="blenderEn.html">Blender</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
+                <a class="nav-link" href="overmijEn.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contactEn.html">Contact</a>
               </li>
             </ul>
           </div>
           <div class="vlag">
-            <a href="overmijEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
+            <a href="overmij.html">
+              <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
             </a>
           </div>
         </div>
       </nav>
 
       <div class="container p-4">
-        <h1 class="text-light text-center">Over mij</h1>
+        <h1 class="text-light text-center">About me</h1>
         <h3  class="text-light text-center">
           <div class="container-aboutme">
             <div class="text">
